sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:12: error: Int(-1) does not take parameters
    if (i>getNombreValeurs())-1{
                               ^